studentchart/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-app-ingress
  namespace: default
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: studentapplication18
    meta.helm.sh/release-namespace: default
spec:
  rules:
    - host: my-app.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: studentapplication18-studentchart
                port:
                  number: 8080
